# vectron

./: .gitignore  AI_ONBOARDING.md  BENCHMARK_REPORT.md  ENV_SAMPLE.env  FLOWS.md  IMPLEMENTATION_PLAN.md  MANAGEMENT_CONSOLE_SUMMARY.md  MEMORY_ANALYSIS.md  Makefile  PERF_OPTIMIZATION_TRACKER.md  PERF_PROFILE_FINDINGS.md  PROGRESS.md  PROTOC_COMMANDS.md  PROTO_SETUP.md  README.md  SEGMENT_NEXT_STEPS.md  TESTING.md  TESTING_PLAN.md  TODO_AND_MISSING_FEATURES.md  VECTRON_IEEE_PAPER.md  VECTRON_IEEE_PAPER_FINAL.tex  VECTRON_IEEE_PAPER_REVISION.md  VECTRON_TRADEOFF_EXPLICIT_PAPER.tex  VERIFICATION_REPORT.md  WORKER_MEMORY_FINDINGS.md  benchmark_research_test.go  benchmark_scalability.csv  billing-updates.txt  e2e_full_test.go  e2e_new_routes_test.go  e2e_test.go  e2e_test_helpers_test.go  focused_research_angles.md  frontend-updates-2.txt  frontend-updates.txt  generate-all.sh  go.mod  go.sum  go.work  go.work.sum  (+6 more)
apigateway/: go.mod  (+4 more)
clientlibs/python/: README.md  pyproject.toml
clientlibs/python/examples/: README.md  basic_operations.py
clientlibs/python/proto/apigateway/: apigateway.pb.gw.go  apigateway.proto
clientlibs/python/vectron_client/: __init__.py  client.py  exceptions.py
clientlibs/python/vectron_client/proto/apigateway/: apigateway.proto  apigateway_pb2.py  apigateway_pb2_grpc.py
clientlibs/python/vectron_client/proto/auth/: auth_pb2.py  auth_pb2_grpc.py
clientlibs/python/vectron_client/proto/placementdriver/: placementdriver_pb2.py  placementdriver_pb2_grpc.py
clientlibs/python/vectron_client/proto/reranker/: reranker_pb2.py  reranker_pb2_grpc.py
(+391 files in other folders)
